--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <a href="#"><i class='bx bxl-twitter'></i></a>
             <a href="#"><i class='bx bxl-linkedin'></i></a>
         </div>
+
+        <span class="homeimgHover"></span>
     </section>
 </body>
 </html>
